# yart

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  application_8h_source.html  classes.html  classyart_1_1Application-members.html  classyart_1_1Application.html  classyart_1_1Application.js  classyart_1_1Image-members.html  classyart_1_1Image.html  classyart_1_1Image.js  classyart_1_1Renderer-members.html  classyart_1_1Renderer.html  classyart_1_1Renderer.js  classyart_1_1Viewport-members.html  classyart_1_1Viewport.html  classyart_1_1Viewport.js  classyart_1_1Window-members.html  classyart_1_1Window.html  classyart_1_1Window.js  classyart_1_1utils_1_1LTStack-members.html  classyart_1_1utils_1_1LTStack.html  classyart_1_1utils_1_1LTStack.js  core__utils_8h_source.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  image_8h_source.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  (+12 more)
.github/workflows/: doxygen-gh-pages.yml  gh-pages-deploy.yml  todo-to-issue.yml
cmake/: VulkanExternal.cmake
docs/: README.md  main.tex  references.bib
docs/include/: ChapterApplication.tex  ChapterConclusion.tex  ChapterImplementation.tex  ChapterIntroduction.tex  PageAbstract.tex  PageTitle.tex  PageTitle_en.tex  PageTitle_pl.tex  SectionIntroduction.tex
docs/include/listings/: ListingCamera1.cpp  ListingCamera2.cpp  ListingClosestHitShader.cpp  ListingIntersectScene.cpp  ListingInverseProjectionMatrix.cpp  ListingMissShader.cpp  ListingMollerTrumbore.cpp  ListingRay.cpp  ListingRayGeneration1.cpp  ListingRayGeneration2.cpp  ListingRayTracingLoop.cpp  ListingShadows.cpp  ListingViewMatrix.cpp
docs/include/page/: title.tex
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  searchdata.js
src/: CMakeLists.txt  application.cpp  application.h  config.cmake  image.cpp  image.h  input.h  main.cpp  renderer.cpp  renderer.h  viewport.cpp  viewport.h  window.cpp  window.h
src/core/: renderer.cpp
src/font/: IconsCodicons.h
src/platform/: image.cpp  image.h  input.cpp  input.h  viewport.cpp  viewport.h  window.cpp  window.h
src/platform/utils/: vk_utils.h
src/utils/: core_utils.h  glm_utils.h  vk_utils.cpp  vk_utils.h  yart_utils.h
src/yart/: application.cpp  application.h  main.cpp
src/yart/GUI/: gui.cpp  gui.h  gui_internal.cpp  gui_internal.h  input.cpp  input.h
src/yart/GUI/views/: renderer_view.cpp  renderer_view.h  viewport_view.cpp  viewport_view.h  world_view.cpp  world_view.h
src/yart/backend/: backend.h  viewport.cpp  viewport.h  window.cpp  window.h
src/yart/backend/impl/: backend_impl_vulkan.cpp  backend_impl_vulkan.h
src/yart/backend/utils/: backend_utils.h  platform_utils.h  vk_utils.cpp  vk_utils.h
src/yart/common/: mesh_factory.cpp  mesh_factory.h
src/yart/common/classes/: mesh_factory.cpp  mesh_factory.h
src/yart/common/memory/: ltstack.h
src/yart/common/threads/: parallel_for.h
src/yart/common/utils/: glm_utils.h  yart_utils.h
src/yart/core/: camera.cpp  camera.h  object.cpp  object.h  ray.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  viewport.cpp  viewport.h  world.cpp  world.h
src/yart/core/RES/: res.cpp  res.h  res_internal.cpp  res_internal.h
src/yart/core/RES/resources/: cubemap.cpp  cubemap.h  resource.cpp  resource.h
src/yart/core/utils/: glm_utils.cpp  glm_utils.h  yart_utils.h
src/yart/interface/: interface.cpp  interface.h  interface_internal.cpp  interface_internal.h  panel.cpp  panel.h
src/yart/interface/panels/: context_panel.cpp  context_panel.h  inspector_panel.cpp  inspector_panel.h  layout_panel.cpp  layout_panel.h  panel_settings.cpp  panel_settings.h  render_viewport_panel.cpp  render_viewport_panel.h
src/yart/interface/views/: camera_view.cpp  camera_view.h  renderer_view.cpp  renderer_view.h  view.cpp  view.h  viewport_view.cpp  viewport_view.h  world_view.cpp  world_view.h
src/yart/platform/: image.cpp  image.h  input.cpp  input.h  viewport.cpp  viewport.h  window.cpp  window.h
src/yart/platform/utils/: platform_utils.h  vk_utils.cpp  vk_utils.h
src/yart/utils/: glm_utils.cpp  glm_utils.h  yart_utils.h
